FIX Vertically align form description contents (including icons)

--- a/client/src/components/Form/Form.scss
+++ b/client/src/components/Form/Form.scss
@@ -123,6 +123,8 @@
 
 .form__field-extra-label,
 .form__field-description {
+  display: flex;
+  align-items: center;
   color: $text-muted;
   margin-top: $input-padding-y;
   margin-bottom: $input-padding-y;
@@ -130,6 +132,15 @@
 
   &:empty {
     display: none;
+  }
+
+  .icon {
+    &::before {
+      font-size: 16px;
+      line-height: inherit;
+      margin-right: 6px;
+      vertical-align: middle;
+    }
   }
 }
 
